@@ -1,3 +1,8 @@
+Development Portal (2020-04-08 shi)
+==============================
+Add print-friendly css for new SAVi
+
+
 Development Portal (2020-04-04 shi)
 ==============================
 Update crs-add section for new SAVi
